sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/Casuals_Job__c.object-meta.xml
<CustomObject>
    <label>Contractors Job</label>
    <nameField>
        <displayFormat>JOB-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractors Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>