sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requesting Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Teamlead__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Contractors Jobs</relationshipLabel>
    <relationshipName>Casuals_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>