sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>