sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/fields/Expected_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Amount__c</fullName>
    <label>Expected Total Amount</label>
    <summarizedField>Casual_Job_Line_Item__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Casual_Job_Line_Item__c.Casuals_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>