sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/fields/RFE__c.field-meta.xml
<CustomField>
    <fullName>RFE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFE</label>
    <referenceTo>RFE__c</referenceTo>
    <relationshipLabel>Contractors Jobs</relationshipLabel>
    <relationshipName>Contractors_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>