sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/fields/Sanergy_Department__c.field-meta.xml
<CustomField>
    <fullName>Sanergy_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanergy Department</label>
    <referenceTo>Sanergy_Department__c</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>