sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/fields/Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is set as true once record is submitted for approval. Field is never unchecked once checked.</description>
    <label>Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>