sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Department Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casuals_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>