sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/validationRules/Cannot_Backdate_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Backdate_Request</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISNEW(),
 Start_Date__c &lt; today()
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Please enter a start date that is not in the past.</errorMessage>
</ValidationRule>