sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/listViews/All_Contractor_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Contractor_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Department__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Expected_Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contractor Jobs</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Business_Development_Associate</roleAndSubordinates>
        <roleAndSubordinates>Finance_Manager</roleAndSubordinates>
        <roleAndSubordinates>Human_Resource</roleAndSubordinates>
        <roleAndSubordinates>Systems_Administrator</roleAndSubordinates>
    </sharedTo>
</ListView>