sfSandBoxCode/force-app/main/default/objects/Casuals_Job__c/listViews/Finance_Approval_For_Casual_Requisitions_Casuals_Job.listView-meta.xml
<ListView>
    <fullName>Finance_Approval_For_Casual_Requisitions_Casuals_Job</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Approval For Casual Requisitions</label>
    <queue>Finance_Approval_For_Casual_Requisitions</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>